# rust-next

./: .gitignore  README.md  note-error.md  note.md
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs
backend/entity/: Cargo.toml  note.md
backend/entity/src/: academic_calendars.rs  academic_years.rs  applicants.rs  attendances.rs  character_assessments.rs  character_traits.rs  class_levels.rs  class_schedules.rs  class_subjects.rs  classes.rs  classrooms.rs  departments.rs  employees.rs  extracurricular_activities.rs  extracurricular_enrollments.rs  facilities.rs  foundations.rs  grades.rs  levels.rs  lib.rs  members.rs  mod.rs  notifications.rs  permissions.rs  positions.rs  prelude.rs  report_cards.rs  role_permissions.rs  role_users.rs  roles.rs  room_facilities.rs  room_types.rs  rooms.rs  salary_payments.rs  schedule_generation_logs.rs  scopes.rs  sea_orm_active_enums.rs  semesters.rs  settings.rs  student_enrollments.rs  (+12 more)
backend/entity/src/traits/: mod.rs  soft_delete.rs  soft_delete_scope.rs
backend/entity_temp/: academic_calendars.rs  academic_years.rs  assessment_components.rs  attendances.rs  character_assessments.rs  character_traits.rs  class_levels.rs  class_schedules.rs  class_subjects.rs  classes.rs  departments.rs  employees.rs  extracurricular_activities.rs  extracurricular_enrollments.rs  extracurricular_grades.rs  extracurriculars.rs  facilities.rs  foundations.rs  grades.rs  homeroom_teachers.rs  levels.rs  members.rs  mod.rs  notifications.rs  permissions.rs  positions.rs  prelude.rs  report_card_details.rs  report_cards.rs  role_permissions.rs  role_users.rs  roles.rs  room_facilities.rs  room_types.rs  rooms.rs  salary_grades.rs  schedule_generation_logs.rs  scopes.rs  sea_orm_active_enums.rs  semesters.rs  (+17 more)
backend/entity_tmp/: attendances.rs  character_assessments.rs  class_levels.rs  class_schedules.rs  classes.rs  employees.rs  extracurricular_activities.rs  foundations.rs  levels.rs  mod.rs  notifications.rs  permissions.rs  prelude.rs  role_permissions.rs  role_users.rs  roles.rs  rooms.rs  subject_room_requirements.rs  teacher_availability.rs  unit_types.rs  user_profiles.rs  users.rs
backend/migrations/: m20240101_000001_add_soft_delete_to_users.rs
backend/src/: app_state.rs  main.rs
backend/src/config/: database.rs
backend/src/controllers/: academic_year_controller.rs  auth_controller.rs  foundation_controller.rs  mod.rs  role_controller.rs  user_controller.rs
backend/src/docs/: academic_year_docs.rs  auth_docs.rs  foundation_docs.rs  mod.rs  role_docs.rs  user_docs.rs
backend/src/errors/: app_error.rs  mod.rs
backend/src/macros/: debug.rs  mod.rs  soft_delete.rs
backend/src/middleware/: auth.rs  mod.rs  swagger_auth.rs
backend/src/models/: academic_year.rs  auth.rs  mod.rs  pagination.rs  role.rs  user.rs
backend/src/modules/: mod.rs
backend/src/modules/academic_years/: academic_year.rs  docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs  services.rs
backend/src/modules/applicants/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/attendances/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/auth/: auth.rs  docs.rs  dto.rs  handler.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs  services.rs
backend/src/modules/class_levels/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/classes/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/departments/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/employees/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/foundations/: docs.rs  dto.rs  foundation.rs  handler.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs  services.rs
backend/src/modules/permissions/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/positions/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/roles/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  role.rs  routes.rs  service.rs  services.rs
backend/src/modules/rooms/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/semesters/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/settings/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/students/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/subjects/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/teachers/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/unit_types/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/units/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/user_profiles/: docs.rs  dto.rs  handler.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/src/modules/users/: docs.rs  dto.rs  handler.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs  services.rs  user.rs
backend/src/routes/: academic_year_routes.rs  auth_routes.rs  foundation_routes.rs  mod.rs  role_routes.rs  user_routes.rs
backend/src/services/: academic_year_service.rs  auth_service.rs  foundation_service.rs  mod.rs  role_service.rs  user_service.rs
backend/src/states/: states.rs
backend/src/utils/: jwt.rs  mod.rs  pagination.rs  pagination_helper.rs  password.rs  response.rs
frontend/: package-lock.json  package.json  proxy.js
rest/: employee.rest  login.rest  register.rest  swagger.rest  user.rest
(+72 files in other folders)
