[workspace]
members = [".", "entity"]
resolver = "2"

[workspace.dependencies]
sea-orm = { version = "1.1" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "silsilah"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "entity" }

# Actix Web Framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Futures
futures = "0.3"

# Database - SeaORM
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# JWT Authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { workspace = true }

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# API Documentation - Swagger/OpenAPI
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
futures-util = "0.3.31"

[dev-dependencies]
sea-orm = { workspace = true, features = ["mock"] }
