# backend/Cargo.toml
[workspace]
members = [".", "entity"]
resolver = "2"

[workspace.dependencies]
chrono = {version = "0.4", features = ["serde"]}
sea-orm = {version = "2.0.0-rc.30"}# ✅ Sudah benar
sea-orm-codegen = {version = "2.0.0-rc.30"}# ✅ Sudah benar
serde = {version = "1.0", features = ["derive"]}

[package]
build = "build.rs"
default-run = "silsilah"
edition = "2021"
name = "silsilah"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
entity = {path = "entity"}

# Actix Web Framework
actix-cors = "0.7"
actix-rt = "2"
actix-web = "4"

# Serialization
serde = {workspace = true}
serde_json = "1.0"

# Futures
futures = "0.3"

# Database - SeaORM
sea-orm = {workspace = true, features = [
  "sqlx-mysql",
  "runtime-tokio-rustls", # ← Ubah dari native-tls ke rustls
  "macros",
  "with-chrono", # ← Tambahkan
  "with-uuid", # ← Tambahkan
]}

# Async runtime
tokio = {version = "1", features = ["full"]}

# Validation
validator = {version = "0.18", features = ["derive"]}

# JWT Authentication
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Environment variables
dotenv = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date and time
chrono = {workspace = true}

# UUID
uuid = {version = "1.0", features = ["serde", "v4"]}

# API Documentation - Swagger/OpenAPI
futures-util = "0.3.31"
utoipa = {version = "5", features = ["actix_extras", "chrono", "uuid"]}
utoipa-swagger-ui = {version = "8", features = ["actix-web"]}

# Rate Limiting
actix-governor = "0.5"
actix-web-httpauth = "0.8.2"

regex = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
sea-orm = {workspace = true, features = ["mock"]}

[build-dependencies]
sea-orm-codegen = {workspace = true}

[[bin]]
name = "gen_module"
path = "scripts/gen_module.rs"
