[package]
edition = "2021"
name = "entity"
version = "0.1.0"

[dependencies]
# async-trait = "0.1" # ← Tambahkan ini
chrono = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
utoipa = {version = "5.3", features = ["chrono"]}# ← Tambah ini
# [build-dependencies]
# sea-orm-codegen = {workspace = true}# ← Perbaiki, pakai workspace
